k8s/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/mark0613/backend:latest
        ports:
        - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /ping
            port: 8888
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: backend-volume
        hostPath:
          path: ./backend
      - name: node-modules
        emptyDir: {}
