k8s/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/mark0613/frontend:latest
        ports:
        - containerPort: 5173
        livenessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: frontend-volume
        hostPath:
          path: ./frontend
      - name: node-modules
        emptyDir: {}
