k8s/deploy-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8.0.8
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        livenessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.runCommand({ connectionStatus: 1 })"
          initialDelaySeconds: 30
          periodSeconds: 60
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
