k8s/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: backend
